--- a/biodata.html
+++ b/biodata.html
@@ -5,7 +5,7 @@
 <body>
 <h1 align="center">BIODATA DIRI</h1>
 <table width="745" border="1" cellspacing="0" cellpadding="5" align="center">
-<tr align="center" bgcolor="blue">
+<tr align="center" bgcolor="white">
 <td width="174">DATA DIRI</td>
 <td width="353">KETERANGAN</td>
 <td width="232">FOTO</td>
@@ -13,7 +13,7 @@
 <tr>
 <td>Nama</td>
 <td>Ahmad Ikhsan</td>
-<td rowspan="10" align="center"><img src="ultraman.jpg" width="210" height="313"></td>
+<td rowspan="10" align="center"><img src="Maung.jpg" width="210" height="313"></td>
 </tr>
 <tr>
 <td>Jurusan</td>
@@ -37,9 +37,9 @@
 </tr>
 <style type="text/css">
 		body{
-			background-image: url(mars.jpg);
+			
 			height: 100vh;
-    		background-color:blueviolet ;
+    		background-color:white ;
     		background-size: cover;
     		background-position: center;
     		background-repeat: no-repeat;
