--- a/biodata.html
+++ b/biodata.html
@@ -73,5 +73,12 @@
 		a{
 			color: black;
 		}
-</table>
 </body>
+</style>
+</table>
+<table align="center">
+	<tr>
+	  <td>
+	  <a href="https://www.instagram.com/ahmadikhsan1919/"><img src="https://img.icons8.com/fluency/48/000000/instagram-new.png"/>
+	  </a>
+	  <a href="https://icons8.com/fluency/48/000000/instagram-new.png"/></a>
