--- a/navbar.html
+++ b/navbar.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <title>Navbar</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
   <body>
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -38,8 +38,8 @@
           Dropdown
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="https://www.youtube.com/watch?v=JhpjKpDUbAY">Youtube tutorial</a>
+          <a class="dropdown-item" href="https://www.instagram.com/ahmadikhsan1919/">Instagram</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="biodata.html">Biodata</a>
         </div>
@@ -57,7 +57,7 @@
 
 <div class="jumbotron jumbotron-fluid">
   <div class="container text-center">
-    <img src="singa.jpg"width=300 class="rounded-circle">
+    <img src="profile1.png"width=300 class="rounded-circle">
     <h1 class="display-4">Ahmad Ikhsan Saparudin</h1>
     <p class="lead">PHP|HTML|CSS</p>
   </div>
@@ -113,7 +113,34 @@
 <div class="card" style="width: 18rem">
   <img class="card-img-top" src="3.jpg" alt="Card image cap">
   <div class="card-body">
-    <p class="card-text">baby Leo</p>
+    <p class="card-text">jamal</p>
+  </div>
+</div>
+</div>
+
+<div class="col">
+<div class="card" style="width: 18rem">
+  <img class="card-img-top" src="4.jpg" alt="Card image cap">
+  <div class="card-body">
+    <p class="card-text">mama Leo</p>
+  </div>
+</div>
+</div>
+
+<div class="col">
+<div class="card" style="width: 18rem">
+  <img class="card-img-top" src="5.jpg" alt="Card image cap">
+  <div class="card-body">
+    <p class="card-text">mama Leo</p>
+  </div>
+</div>
+</div>
+
+<div class="col">
+<div class="card" style="width: 18rem">
+  <img class="card-img-top" src="singa.jpg" alt="Card image cap">
+  <div class="card-body">
+    <p class="card-text">mama Leo</p>
   </div>
 </div>
 </div>
